it doesn't work, but it's compiling, the commit is made before big changes, at this point storage is ** next it will be *

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 ﻿# CMakeList.txt: projekt CMake dla elementu hash_table, dołącz źródło i zdefiniuj
 # tutaj logikę specyficzną dla projektu.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required(VERSION 3.17)
+project(gol)
+set(CMAKE_CXX_STANDARD 14)
+
 
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-add_executable (hash_table "hash_table.cpp" "hash_table.h" "pair.h")
+add_executable (hash_table "hash_table.cpp" "hash_table.h" "pair.h" "hash_function.h")
 
-# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
+
