ok few improvements, push seems to be working, not pop tho, pop's shit, also iterator's shiet but i've made addicional files like h_table.cpp so that's that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-add_executable (hash_table "hash_table.cpp" "hash_table.h" "pair.h" "hash_function.h")
+add_executable (hash_table "main.cpp" "h_table.cpp" "h_table.h" "pair.h" "hash_function.h")
 
+set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
 
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive  -Wl,--no-whole-archive")
