--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # tutaj logikę specyficzną dla projektu.
 #
 cmake_minimum_required(VERSION 3.17)
-project(gol)
+project(hash_table)
 set(CMAKE_CXX_STANDARD 14)
 
 
@@ -10,10 +10,6 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable (hash_table
         main.cpp
         h_table.h
-        h_table.cpp
         pair.h
         hash_function.h)
 
-set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
-
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive  -Wl,--no-whole-archive")
